Fix title size on small screens

--- a/style.css
+++ b/style.css
@@ -38,3 +38,15 @@ html {
 #container {
   margin: 20px;
 }
+
+@media screen and (max-width: 600px) {
+  #title {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-device-width: 480px) {
+  body {
+    -webkit-text-size-adjust: none;
+  }
+}
